--- a/package.json
+++ b/package.json
@@ -3,11 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
+    "css-loader": "^0.28.4",
+    "jquery": "^3.2.1",
+    "loadash": "0.0.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-router-dom": "^4.1.1"
+    "react-router-dom": "^4.1.1",
+    "style-loader": "^0.18.2",
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.9",
+    "uuid": "^3.1.0",
+    "webpack": "^3.0.0",
+    "webpack-dev-server": "^2.5.0"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "bootstrap-css": "^4.0.0-alpha.5",
     "eslint": "^4.1.1",
     "eslint-plugin-jsx": "^0.0.2",
     "eslint-plugin-react": "^7.1.0",
