--- a/package.json
+++ b/package.json
@@ -32,7 +32,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "lint": "eslint ./src",
-    "precommit": "npm run lint"
+    "lint": "eslint ./src"
   }
 }
