--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "axios": "^0.16.2",
+    "bootstrap": "^3.3.7",
     "css-loader": "^0.28.4",
     "jquery": "^3.2.1",
     "loadash": "0.0.1",
